# covid19

./: .gitignore  README.md
src/client/: angular.json  index.html  package-lock.json  package.json
src/server/: app-covid19-cluster.js  app.js  config.js  configScript.js  package-lock.json  package.json  prod-start.sh  prod-stop.sh  (+1 more)
src/server/scripts/: .~lock.casos.csv#  Upload_Backup_Planilhas.py  agendador-scripts.sh  atualiza_bairros.js  atualiza_bairros_obitos.js  atualiza_casos.js  atualiza_casos_bkp.js  atualiza_casos_municipios.js  atualiza_casos_old.js  atualiza_clima.js  atualiza_clima_copy.js  atualiza_dados_bairros.sh  atualiza_estados_casos.js  atualiza_estatisticas.js  atualiza_estatisticas_luisa.js  atualiza_medias_moveis.js  atualiza_medias_moveis_obitos.js  atualiza_projecao.js  atualiza_projecao_luisa.js  atualiza_r_bairros.js  atualizacao_automatica_bairros.sh  atualizacao_automatica_casos.sh  atualizacao_automatica_estatisticas.sh  bairros_casos.csv  casos.csv  confirmados.csv  download_planilha_casos.py  download_planilha_casos_bairros.py  download_planilha_estatisticas.py  download_planilha_estisticas.py  estados_casos.csv  estatisticas.csv  insert_city.js  medias_moveis.csv  medias_moveis_obitos.csv  obitos.csv  projecao_casos_go.csv  projecao_casos_go.js  pyproject.toml  requirements_upload.txt  (+9 more)
src/server/scripts/update_covid19/: .gitignore  config.py  db.py
src/server/scripts/update_covid19/controller/: casos.py  clear_error.py
src/server/scripts/update_covid19/models/: covid19.py
src/server/scripts/update_covid19/utils/: ibge.py
(+69 files in other folders)
