[tool.poetry]
name = "update-covid19"
version = "0.1.0"
description = ""
authors = ["Jairo Matos da Rocha <devjairorm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
requests = "^2.28.1"
SQLAlchemy = "^1.4.39"
dynaconf = "^3.1.9"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
blue = "^0.9.0"
isort = "^5.10.1"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
